# basic-service

./: .gitignore  Dockerfile  DockerfileDev  README.md  alembic.ini  alembic_prod.ini  dev_requirements.txt  gunicorn.py  main.py  pyproject.toml  requirements.txt  requirements_prod.txt  startup.sh  test_main.http
.github/: codeql.yml
.github/workflows/: build.yml  codeql.yml  dev.yml  dockerhub.yml  pypi.yml  python-publish.yml  release.yml
alembic/: env.py
alembic/versions/: 1b02f3acd592_init.py  5f1533ae3bf3_add_totp.py  69366a21b194_set_not_null.py  bd5df1b0201c_.py  e97d27b3a8d3_init.py  ee011f74a986_change_sys_user.py
apis/: __init__.py  auth_controller.py  content_controller.py  folder_controller.py  user.py  user_controller.py
asset/: 2026_01_22_transfer.sql  2026_05_05_resource.sql  raw.sql  resource.csv  transfer.py.txt
assets/: config.json  production_config.json
conf/: config.json  server_config.json
core/: __init__.py  config.py  database.py  dependency.py  security.py  user.py
dao/: __init__.py  base_dao.py  resource_dao.py  user_dao.py
models/: __init__.py  base.py  relations.py  resources.py  sys_user.py
schemas/: __init__.py  resource.py  user.py
schemas/request/: user.py
schemas/response/: general.py  user.py
service/: __init__.py  init_service.py  resource_service.py  security_service.py  user_service.py
src/: config.py  main.py
src/apis/: __init__.py  auth_controller.py  category_controller.py  content_controller.py  default_controller.py  file_controller.py  folder_controller.py  tag_controller.py  user_controller.py
src/core/: config.py  decorator.py  dependency.py
src/dao/: __init__.py  async_database.py  async_redis.py  base_dao.py  (+3 more)
templates/: daily_mail.html  two_fa_code.html
test/: __init__.py  test_client.py  test_content.http  test_database.py  test_folder.http  test_main.http  test_main.py  test_post.py  test_storage.py  test_tag.http  test_user.http  test_utils.py
wwricu/: __init__.py  config.py  main.py  middleware.py
(+123 files in other folders)
