[project]
name = 'wwricu'
description = 'wwr.icu api service'
requires-python = '>=3.12'
dynamic = ['version']

dependencies = [
    'aiosqlite==0.22.1',
    'apscheduler==3.11.2',
    'bcrypt==5.0.0',
    'boto3==1.42.78',
    'fastapi[standard]==0.135.2',
    'loguru==0.7.3',
    'pyotp==2.9.0',
    "sqlalchemy==2.0.48",
]

[tool.setuptools.dynamic]
version = { file = 'version.txt' }

[tool.setuptools.package-dir]
wwricu = 'wwricu'

[dependency-groups]
dev = [
    "boto3-stubs[essential]==1.42.78",
    'pytest==9.0.2',
    'pytest-asyncio==1.3.0',
]
