[project]
name = 'wwricu'
description = 'wwr.icu api service'
requires-python = '>=3.12'
dynamic = ['version']

dependencies = [
    'aiosqlite==0.22.1',
    'apscheduler==3.11.2',
    'bcrypt==5.0.0',
    'boto3==1.42.80',
    "boto3-stubs[s3, appconfig]==1.42.80",
    'fastapi[standard]==0.135.3',
    'loguru==0.7.3',
    'pyotp==2.9.0',
    "sqlalchemy==2.0.48",
]

[tool.setuptools.dynamic]
version = { file = 'version.txt' }

[tool.setuptools.package-dir]
wwricu = 'wwricu'

[dependency-groups]
dev = [
    'pytest==9.0.2',
    'pytest-asyncio==1.3.0',
]
