[project]
name = 'wwricu'
description = 'wwr.icu api service'
requires-python = '>=3.12'
dynamic = ['version']

dependencies = [
    'aiosqlite==0.22.1',
    'apscheduler==3.11.2',
    'bcrypt==5.0.0',
    'boto3~=1.42.96',
    "boto3-stubs[appconfig,s3]~=1.42.96",
    'fastapi[standard]==0.136.1',
    'loguru==0.7.3',
    'pyotp==2.9.0',
    "sqlalchemy==2.0.49",
]

[tool.setuptools.dynamic]
version = { file = 'version.txt' }

[tool.setuptools.packages.find]
include = ['wwricu*']

[tool.setuptools.package-dir]
wwricu = 'wwricu'

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
ignore = ['E712']

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    'pytest==9.0.3',
    'pytest-asyncio==1.3.0',
    "ruff>=0.15.12",
]
